[package]
name = "ancs-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.1", default-features = false, features = ["full"] }
config = { version = "0.13.4", features = ["toml"] }
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
