[package]
name = "ancs-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.1", default-features = false, features = ["full"] }
byteorder = "1.5.0"
config = { version = "0.13.4", features = ["toml"] }
futures = "0.3.30"
libnotify = "1.0.3"
rand = "0.8.5"
simplelog = "0.12.2"
tokio = { version = "1.35.1", features = ["full"] }
xdg = "2.5.2"
