[package]
name = "ancs-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.1", default-features = false, features = ["full"] }
byteorder = "1.5.0"
config = { version = "0.13.4", features = ["toml"] }
env_logger = "0.11.3"
futures = "0.3.30"
libnotify = "1.0.3"
log = { version = "0.4.21" }
tokio = { version = "1.35.1", features = ["full"] }
uuid = "1.8.0"
xdg = "2.5.2"

[dev-dependencies]
rand = "0.8.5"
